[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/Menus/MainMenuButtons.gd" type="Script" id=2]
[ext_resource path="res://Fonts/TextFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Misc/icon.png" type="Texture" id=4]
[ext_resource path="res://UI/Menus/MenuHeader.tscn" type="PackedScene" id=5]

[node name="Node2D" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1336.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
_sections_unfolded = [ "Size Flags", "Theme" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 120.0
margin_right = 460.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
_sections_unfolded = [ "Theme" ]

[node name="MainMenuButtons" type="VBoxContainer" parent="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.1
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -283.0
margin_right = 354.0
margin_bottom = 282.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 30
alignment = 0
script = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_constants", "custom_styles" ]

[node name="PlayButton" type="Button" parent="Panel/MainMenuButtons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 375.0
margin_bottom = 89.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Play the game."
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = false
align = 1

[node name="OptionsButton" type="Button" parent="Panel/MainMenuButtons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 119.0
margin_right = 375.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Configure the game."
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../HelpButton")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Rect", "custom_fonts" ]

[node name="HelpButton" type="Button" parent="Panel/MainMenuButtons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 238.0
margin_right = 375.0
margin_bottom = 327.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Information on the game."
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../CreditsButton")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Help"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Hint" ]

[node name="CreditsButton" type="Button" parent="Panel/MainMenuButtons" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 357.0
margin_right = 375.0
margin_bottom = 446.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../HelpButton")
focus_neighbour_bottom = NodePath("../QuitButton")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Credits"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Theme" ]

[node name="QuitButton" type="Button" parent="Panel/MainMenuButtons" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 476.0
margin_right = 375.0
margin_bottom = 565.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Quit the game."
focus_neighbour_top = NodePath("../CreditsButton")
focus_neighbour_bottom = NodePath("../PlayButton")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="SplashBG" type="ColorRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 725.0
margin_top = 120.0
margin_right = 1290.0
margin_bottom = 525.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )

[node name="Splash" type="TextureRect" parent="SplashBG" index="0"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -550.0
margin_top = 10.0
margin_right = -14.0
margin_bottom = -15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0

[node name="Copyright" type="Label" parent="SplashBG/Splash" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 405.0
margin_right = 540.0
margin_bottom = 445.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Copyright Â© 2018 Sledgehog Software"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Version" type="Label" parent="." index="2"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -170.0
margin_top = -60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Alpha 7"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "custom_fonts" ]

[node name="Header" parent="." index="3" instance=ExtResource( 5 )]

text = "Cubytes"

[connection signal="pressed" from="Panel/MainMenuButtons/PlayButton" to="Panel/MainMenuButtons" method="_on_PlayButton_pressed"]

[connection signal="pressed" from="Panel/MainMenuButtons/OptionsButton" to="Panel/MainMenuButtons" method="_on_OptionsButton_pressed"]

[connection signal="pressed" from="Panel/MainMenuButtons/HelpButton" to="Panel/MainMenuButtons" method="_on_HelpButton_pressed"]

[connection signal="pressed" from="Panel/MainMenuButtons/CreditsButton" to="Panel/MainMenuButtons" method="_on_CreditsButton_pressed"]

[connection signal="pressed" from="Panel/MainMenuButtons/QuitButton" to="Panel/MainMenuButtons" method="_on_QuitButton_pressed"]


